--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "i18n"
+name = "simple-i18n"
 version = "0.0.1"
-authors = ["tgne"]
+authors = ["tdgne"]
 
 [dependencies]
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+toml = "0.4"
 
 [dev-dependencies]
 tempdir = "0.3.5"
